   run folder name optional. Changed the order of the attributes of the
   method. This change allows to identify existing run database records in
   cases when the run folder name has been changed and thus helps to prevent
   creating duplicate run records. The change is driven by the uncertainty
   around rules for UltimaGen platform on-instrument reanalysis.
 - Added Ultimagen staging monitor and its daemon definition.
 - Add a new run status for UltimaGen platform "off-tool automation in
   progress". This represents processing that is not following the
   npg_seq_pipeline sequence of events and is not handled by manufacturer-
   supplied hardware.

release 105.8.1 (2025-10-09)
 - CI updates

release 105.8.0 (2025-09-01)
 - Updated instrument image generation so that the rendered image for Elembio
   instruments is correct.
 - Updated Monitor::Elembio::RunParametersParser :
   - added run_name attribute,
   - changed the attribute type of both runparams_path and runfolder_path so
     that the existence of the relevant file or directory is performed,
   - added builder methods for runparams_path and runfolder_path attributes,
   - ensured that runfolder_path attribute is used when a path of the
     RunParameters.json file is needed.

release 105.7.0 (2025-08-18)
 - Isolate the RunParameters.json parser from the Monitor::Elembio::RunFolder
   into Monitor::Elembio::RunParametersParser
 - Refactor the elembio staging monitor to catch warnings from carp
 - Remove verbose option and List::MoreUtils unused import from
   the elembio staging monitor

release 105.6.1 (2025-08-12)
 - Bug fix - allow for registering old Elembio runs with no run type defined in RunParameters.json

release 105.6.0 (2025-08-06)
 - Registration of 'cytoprofiling' runs in tracking DB
 - Simplification of Elembio parser: simplified compute of actual cycle count,
   dropped POD for private methods and attributes, removed superfluous imports,