@@ -17,12 +17,14 @@ my $dir_out;
 my $id_run;
 my @lanes = ();
 my $status;
+my $username;
 my $db_flag;
-GetOptions('dir_out=s' => \$dir_out,
-           'id_run=i'  => \$id_run,
-           'status=s'  => \$status,
-           'lanes=i@'  => \@lanes,
-           'db_save'   => \$db_flag,
+GetOptions('dir_out=s'  => \$dir_out,
+           'id_run=i'   => \$id_run,
+           'status=s'   => \$status,
+           'username=s' => \$username,
+           'lanes=i@'   => \@lanes,
+           'db_save'    => \$db_flag,
           ) || pod2usage(2);
 
 my $layout = '%d %-5p %c - %m%n';
@@ -46,7 +48,11 @@ if ( !(-d $dir_out && -w $dir_out) ) {
 sleep 2;
 
 my $status_obj = npg_tracking::status->new(
-   id_run => $id_run, status => $status, lanes => \@lanes);
+   id_run   => $id_run,
+   status   => $status,
+   lanes    => \@lanes,
+   username => $username
+);
 
 if ($db_flag) {
   $logger->info("Saving status '$status' to the database"); 
@@ -82,6 +88,8 @@ npg_status_save
   #save status for a run and create a database record
   npg_status_save --id_run 1234 --dir_out my_dir --db_save \
     --status 'analysis pending'
+  npg_status_save --id_run 1234 --dir_out my_dir --db_save \
+    --status 'analysis pending' --username gspipe
 
 =head1 REQUIRED ARGUMENTS
 
@@ -96,6 +104,8 @@ the status record is created in the tracking database.
 
 If --lanes is set then one lane status JSON file is created to cover all lanes.
 
+If --username is set, it will be used when creating a database record.
+
 =head1 EXIT STATUS
 
  0
@@ -104,8 +114,10 @@ If --lanes is set then one lane status JSON file is created to cover all lanes.
 
 =head1 DESCRIPTION
 
-Given run identifier, an optional array of lanes, the status description
-and output directory, creates a json file recording the input plus a timestamp.
+Given run identifier, an optional array of lanes, an optional username,
+the status description and output directory, creates a json file recording
+the input plus a timestamp.
+
 Optionally creates a run or lane status record in the tracking database.
 
 =head1 DIAGNOSTICS
@@ -152,7 +164,7 @@ Optionally creates a run or lane status record in the tracking database.
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2014,2019,2021 Genome Research Ltd.
+Copyright (C) 2014,2019,2021,2025 Genome Research Ltd.
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
